oap-server/oal-grammar/target/generated-sources/antlr4/org/apache/skywalking/oal/rt/grammar/OALParser.java
// Generated from org\apache\skywalking\oal\rt\grammar\OALParser.g4 by ANTLR 4.7.1
package org.apache.skywalking.oal.rt.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OALParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FROM=1, FILTER=2, DISABLE=3, SRC_ALL=4, SRC_SERVICE=5, SRC_SERVICE_INSTANCE=6, 
		SRC_ENDPOINT=7, SRC_SERVICE_RELATION=8, SRC_SERVICE_INSTANCE_RELATION=9, 
		SRC_ENDPOINT_RELATION=10, SRC_SERVICE_INSTANCE_JVM_CPU=11, SRC_SERVICE_INSTANCE_JVM_MEMORY=12, 
		SRC_SERVICE_INSTANCE_JVM_MEMORY_POOL=13, SRC_SERVICE_INSTANCE_JVM_GC=14, 
		SRC_SERVICE_INSTANCE_JVM_THREAD=15, SRC_SERVICE_INSTANCE_JVM_CLASS=16, 
		SRC_DATABASE_ACCESS=17, SRC_SERVICE_INSTANCE_CLR_CPU=18, SRC_SERVICE_INSTANCE_CLR_GC=19, 
		SRC_SERVICE_INSTANCE_CLR_THREAD=20, SRC_ENVOY_INSTANCE_METRIC=21, SRC_EVENT=22, 
		SRC_BROWSER_APP_PERF=23, SRC_BROWSER_APP_PAGE_PERF=24, SRC_BROWSER_APP_SINGLE_VERSION_PERF=25, 
		SRC_BROWSER_APP_TRAFFIC=26, SRC_BROWSER_APP_PAGE_TRAFFIC=27, SRC_BROWSER_APP_SINGLE_VERSION_TRAFFIC=28, 
		DOT=29, LR_BRACKET=30, RR_BRACKET=31, LS_BRACKET=32, RS_BRACKET=33, COMMA=34, 
		SEMI=35, EQUAL=36, DUALEQUALS=37, ALL=38, GREATER=39, LESS=40, GREATER_EQUAL=41, 
		LESS_EQUAL=42, NOT_EQUAL=43, LIKE=44, IN=45, CONTAIN=46, NOT_CONTAIN=47, 
		BOOL_LITERAL=48, NUMBER_LITERAL=49, CHAR_LITERAL=50, STRING_LITERAL=51, 
		DelimitedComment=52, LineComment=53, SPACE=54, IDENTIFIER=55;
	public static final int
		RULE_root = 0, RULE_aggregationStatement = 1, RULE_disableStatement = 2, 
		RULE_metricStatement = 3, RULE_filterStatement = 4, RULE_filterExpression = 5, 
		RULE_source = 6, RULE_disableSource = 7, RULE_sourceAttributeStmt = 8, 
		RULE_sourceAttribute = 9, RULE_variable = 10, RULE_aggregateFunction = 11, 
		RULE_functionName = 12, RULE_funcParamExpression = 13, RULE_literalExpression = 14, 
		RULE_expression = 15, RULE_containMatch = 16, RULE_notContainMatch = 17, 
		RULE_booleanMatch = 18, RULE_stringMatch = 19, RULE_greaterMatch = 20, 
		RULE_lessMatch = 21, RULE_greaterEqualMatch = 22, RULE_lessEqualMatch = 23, 
		RULE_booleanNotEqualMatch = 24, RULE_notEqualMatch = 25, RULE_likeMatch = 26, 
		RULE_inMatch = 27, RULE_multiConditionValue = 28, RULE_conditionAttributeStmt = 29, 
		RULE_conditionAttribute = 30, RULE_booleanConditionValue = 31, RULE_stringConditionValue = 32, 
		RULE_enumConditionValue = 33, RULE_numberConditionValue = 34;
	public static final String[] ruleNames = {
		"root", "aggregationStatement", "disableStatement", "metricStatement", 
		"filterStatement", "filterExpression", "source", "disableSource", "sourceAttributeStmt", 
		"sourceAttribute", "variable", "aggregateFunction", "functionName", "funcParamExpression", 
		"literalExpression", "expression", "containMatch", "notContainMatch", 
		"booleanMatch", "stringMatch", "greaterMatch", "lessMatch", "greaterEqualMatch", 
		"lessEqualMatch", "booleanNotEqualMatch", "notEqualMatch", "likeMatch", 
		"inMatch", "multiConditionValue", "conditionAttributeStmt", "conditionAttribute", 
		"booleanConditionValue", "stringConditionValue", "enumConditionValue", 
		"numberConditionValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'from'", "'filter'", "'disable'", "'All'", "'Service'", "'ServiceInstance'", 
		"'Endpoint'", "'ServiceRelation'", "'ServiceInstanceRelation'", "'EndpointRelation'", 
		"'ServiceInstanceJVMCPU'", "'ServiceInstanceJVMMemory'", "'ServiceInstanceJVMMemoryPool'", 
		"'ServiceInstanceJVMGC'", "'ServiceInstanceJVMThread'", "'ServiceInstanceJVMClass'", 
		"'DatabaseAccess'", "'ServiceInstanceCLRCPU'", "'ServiceInstanceCLRGC'", 
		"'ServiceInstanceCLRThread'", "'EnvoyInstanceMetric'", "'Event'", "'BrowserAppPerf'", 
		"'BrowserAppPagePerf'", "'BrowserAppSingleVersionPerf'", "'BrowserAppTraffic'", 
		"'BrowserAppPageTraffic'", "'BrowserAppSingleVersionTraffic'", "'.'", 
		"'('", "')'", "'['", "']'", "','", "';'", "'='", "'=='", "'*'", "'>'", 
		"'<'", "'>='", "'<='", "'!='", "'like'", "'in'", "'contain'", "'not contain'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "FROM", "FILTER", "DISABLE", "SRC_ALL", "SRC_SERVICE", "SRC_SERVICE_INSTANCE", 
		"SRC_ENDPOINT", "SRC_SERVICE_RELATION", "SRC_SERVICE_INSTANCE_RELATION", 
		"SRC_ENDPOINT_RELATION", "SRC_SERVICE_INSTANCE_JVM_CPU", "SRC_SERVICE_INSTANCE_JVM_MEMORY", 
		"SRC_SERVICE_INSTANCE_JVM_MEMORY_POOL", "SRC_SERVICE_INSTANCE_JVM_GC", 
		"SRC_SERVICE_INSTANCE_JVM_THREAD", "SRC_SERVICE_INSTANCE_JVM_CLASS", "SRC_DATABASE_ACCESS", 
		"SRC_SERVICE_INSTANCE_CLR_CPU", "SRC_SERVICE_INSTANCE_CLR_GC", "SRC_SERVICE_INSTANCE_CLR_THREAD", 
		"SRC_ENVOY_INSTANCE_METRIC", "SRC_EVENT", "SRC_BROWSER_APP_PERF", "SRC_BROWSER_APP_PAGE_PERF", 
		"SRC_BROWSER_APP_SINGLE_VERSION_PERF", "SRC_BROWSER_APP_TRAFFIC", "SRC_BROWSER_APP_PAGE_TRAFFIC", 
		"SRC_BROWSER_APP_SINGLE_VERSION_TRAFFIC", "DOT", "LR_BRACKET", "RR_BRACKET", 
		"LS_BRACKET", "RS_BRACKET", "COMMA", "SEMI", "EQUAL", "DUALEQUALS", "ALL", 
		"GREATER", "LESS", "GREATER_EQUAL", "LESS_EQUAL", "NOT_EQUAL", "LIKE", 
		"IN", "CONTAIN", "NOT_CONTAIN", "BOOL_LITERAL", "NUMBER_LITERAL", "CHAR_LITERAL", 
		"STRING_LITERAL", "DelimitedComment", "LineComment", "SPACE", "IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OALParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OALParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public List<AggregationStatementContext> aggregationStatement() {
			return getRuleContexts(AggregationStatementContext.class);
		}
		public AggregationStatementContext aggregationStatement(int i) {
			return getRuleContext(AggregationStatementContext.class,i);
		}
		public List<DisableStatementContext> disableStatement() {
			return getRuleContexts(DisableStatementContext.class);
		}
		public DisableStatementContext disableStatement(int i) {
			return getRuleContext(DisableStatementContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DISABLE || _la==IDENTIFIER) {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(70);
					aggregationStatement();
					}
					break;
				case DISABLE:
					{
					setState(71);
					disableStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregationStatementContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(OALParser.EQUAL, 0); }
		public MetricStatementContext metricStatement() {
			return getRuleContext(MetricStatementContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(OALParser.SEMI, 0); }
		public TerminalNode EOF() { return getToken(OALParser.EOF, 0); }
		public List<TerminalNode> SPACE() { return getTokens(OALParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(OALParser.SPACE, i);
		}
		public TerminalNode DelimitedComment() { return getToken(OALParser.DelimitedComment, 0); }
		public TerminalNode LineComment() { return getToken(OALParser.LineComment, 0); }
		public AggregationStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregationStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterAggregationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitAggregationStatement(this);
		}
	}

	public final AggregationStatementContext aggregationStatement() throws RecognitionException {
		AggregationStatementContext _localctx = new AggregationStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_aggregationStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			variable();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(78);
				match(SPACE);
				}
			}

			setState(81);
			match(EQUAL);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(82);
				match(SPACE);
				}
			}

			setState(85);
			metricStatement();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DelimitedComment) {
				{
				setState(86);
				match(DelimitedComment);
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LineComment) {
				{
				setState(89);
				match(LineComment);
				}
			}

			setState(92);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==SEMI) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisableStatementContext extends ParserRuleContext {
		public TerminalNode DISABLE() { return getToken(OALParser.DISABLE, 0); }
		public TerminalNode LR_BRACKET() { return getToken(OALParser.LR_BRACKET, 0); }
		public DisableSourceContext disableSource() {
			return getRuleContext(DisableSourceContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(OALParser.RR_BRACKET, 0); }
		public TerminalNode SEMI() { return getToken(OALParser.SEMI, 0); }
		public TerminalNode EOF() { return getToken(OALParser.EOF, 0); }
		public TerminalNode DelimitedComment() { return getToken(OALParser.DelimitedComment, 0); }
		public TerminalNode LineComment() { return getToken(OALParser.LineComment, 0); }
		public DisableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterDisableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitDisableStatement(this);
		}
	}

	public final DisableStatementContext disableStatement() throws RecognitionException {
		DisableStatementContext _localctx = new DisableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_disableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(DISABLE);
			setState(95);
			match(LR_BRACKET);
			setState(96);
			disableSource();
			setState(97);
			match(RR_BRACKET);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DelimitedComment) {
				{
				setState(98);
				match(DelimitedComment);
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LineComment) {
				{
				setState(101);
				match(LineComment);
				}
			}

			setState(104);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==SEMI) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetricStatementContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(OALParser.FROM, 0); }
		public TerminalNode LR_BRACKET() { return getToken(OALParser.LR_BRACKET, 0); }
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(OALParser.RR_BRACKET, 0); }
		public TerminalNode DOT() { return getToken(OALParser.DOT, 0); }
		public AggregateFunctionContext aggregateFunction() {
			return getRuleContext(AggregateFunctionContext.class,0);
		}
		public List<SourceAttributeStmtContext> sourceAttributeStmt() {
			return getRuleContexts(SourceAttributeStmtContext.class);
		}
		public SourceAttributeStmtContext sourceAttributeStmt(int i) {
			return getRuleContext(SourceAttributeStmtContext.class,i);
		}
		public List<FilterStatementContext> filterStatement() {
			return getRuleContexts(FilterStatementContext.class);
		}
		public FilterStatementContext filterStatement(int i) {
			return getRuleContext(FilterStatementContext.class,i);
		}
		public MetricStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metricStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterMetricStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitMetricStatement(this);
		}
	}

	public final MetricStatementContext metricStatement() throws RecognitionException {
		MetricStatementContext _localctx = new MetricStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_metricStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(FROM);
			setState(107);
			match(LR_BRACKET);
			setState(108);
			source();
			{
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				sourceAttributeStmt();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOT );
			}
			setState(114);
			match(RR_BRACKET);
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(116); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(115);
						filterStatement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(118); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			setState(122);
			match(DOT);
			setState(123);
			aggregateFunction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterStatementContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(OALParser.DOT, 0); }
		public TerminalNode FILTER() { return getToken(OALParser.FILTER, 0); }
		public TerminalNode LR_BRACKET() { return getToken(OALParser.LR_BRACKET, 0); }
		public FilterExpressionContext filterExpression() {
			return getRuleContext(FilterExpressionContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(OALParser.RR_BRACKET, 0); }
		public FilterStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterFilterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitFilterStatement(this);
		}
	}

	public final FilterStatementContext filterStatement() throws RecognitionException {
		FilterStatementContext _localctx = new FilterStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filterStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(DOT);
			setState(126);
			match(FILTER);
			setState(127);
			match(LR_BRACKET);
			setState(128);
			filterExpression();
			setState(129);
			match(RR_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FilterExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterFilterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitFilterExpression(this);
		}
	}

	public final FilterExpressionContext filterExpression() throws RecognitionException {
		FilterExpressionContext _localctx = new FilterExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filterExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public TerminalNode SRC_ALL() { return getToken(OALParser.SRC_ALL, 0); }
		public TerminalNode SRC_SERVICE() { return getToken(OALParser.SRC_SERVICE, 0); }
		public TerminalNode SRC_DATABASE_ACCESS() { return getToken(OALParser.SRC_DATABASE_ACCESS, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE() { return getToken(OALParser.SRC_SERVICE_INSTANCE, 0); }
		public TerminalNode SRC_ENDPOINT() { return getToken(OALParser.SRC_ENDPOINT, 0); }
		public TerminalNode SRC_SERVICE_RELATION() { return getToken(OALParser.SRC_SERVICE_RELATION, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_RELATION() { return getToken(OALParser.SRC_SERVICE_INSTANCE_RELATION, 0); }
		public TerminalNode SRC_ENDPOINT_RELATION() { return getToken(OALParser.SRC_ENDPOINT_RELATION, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_CLR_CPU() { return getToken(OALParser.SRC_SERVICE_INSTANCE_CLR_CPU, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_CLR_GC() { return getToken(OALParser.SRC_SERVICE_INSTANCE_CLR_GC, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_CLR_THREAD() { return getToken(OALParser.SRC_SERVICE_INSTANCE_CLR_THREAD, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_CPU() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_CPU, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_MEMORY() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_MEMORY, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_MEMORY_POOL() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_MEMORY_POOL, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_GC() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_GC, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_THREAD() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_THREAD, 0); }
		public TerminalNode SRC_SERVICE_INSTANCE_JVM_CLASS() { return getToken(OALParser.SRC_SERVICE_INSTANCE_JVM_CLASS, 0); }
		public TerminalNode SRC_ENVOY_INSTANCE_METRIC() { return getToken(OALParser.SRC_ENVOY_INSTANCE_METRIC, 0); }
		public TerminalNode SRC_BROWSER_APP_PERF() { return getToken(OALParser.SRC_BROWSER_APP_PERF, 0); }
		public TerminalNode SRC_BROWSER_APP_PAGE_PERF() { return getToken(OALParser.SRC_BROWSER_APP_PAGE_PERF, 0); }
		public TerminalNode SRC_BROWSER_APP_SINGLE_VERSION_PERF() { return getToken(OALParser.SRC_BROWSER_APP_SINGLE_VERSION_PERF, 0); }
		public TerminalNode SRC_BROWSER_APP_TRAFFIC() { return getToken(OALParser.SRC_BROWSER_APP_TRAFFIC, 0); }
		public TerminalNode SRC_BROWSER_APP_PAGE_TRAFFIC() { return getToken(OALParser.SRC_BROWSER_APP_PAGE_TRAFFIC, 0); }
		public TerminalNode SRC_BROWSER_APP_SINGLE_VERSION_TRAFFIC() { return getToken(OALParser.SRC_BROWSER_APP_SINGLE_VERSION_TRAFFIC, 0); }
		public TerminalNode SRC_EVENT() { return getToken(OALParser.SRC_EVENT, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OALParserListener ) ((OALParserListener)listener).exitSource(this);
		}
	}
